debug renderer: GREEN phase 2 — implement math/octree primitives
Segment3 does clamped-parametric closest-distance math for segment-vs-
segment and point-vs-segment (including coincident/degenerate cases).
RingBuffer is a bounded FIFO with drop-oldest-on-overflow. DepthColor
maps octree node sizes {16,8,4,2,1} to a fixed palette and throws on
any other size. OctreeOverlay.collectOctants walks a Branch tree
recursively, emitting one Box per node. All 10 previously-red tests
now pass; both test lanes fully green, no regressions.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>